# GuestCheckin

./: .gitignore  Cargo.toml  README.md
src/: email.rs  listing.rs  logger.rs  main.rs  settings.rs  unlfile.rs
src/config/: config.toml  config.toml.example
src/listing/: guest.rs  reservation.rs
