[package]
name = "google"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14.0"
log = "0.4.22"
fern = "0.6.2"
google-sheets4 = "5.0.5+20240621"
serde = "^1.0"
serde_derive = "1.0.210"
serde_json = "^1.0"
tokio = {version = "1.40.0", features = ["full"]}
humantime = "2.1.0"
chrono = "0.4.38"
reqwest = "0.12.8"
aws-sigv4 = "1.2.4"
aws-smithy-runtime-api = "1.7.2"
http = "1.1.0"
aws-credential-types = "1.2.1"
encoding_rs = "0.8.35"
rusoto_core = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_sesv2 = "0.48.0"
base64 = "0.13.0"